<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.neuranode.neuranodeapp.RegisterActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:id="@+id/firstNameField"
                android:background="@android:color/white"
                android:layout_marginBottom="15dp"
                android:hint="@string/first_name_hint"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/firstNameMessageText"
                android:visibility="invisible"
                android:singleLine="false"
                android:text="@string/error_invalid_first_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress|textPersonName"
                android:ems="10"
                android:id="@+id/lastNameField"
                android:background="@android:color/white"
                android:layout_marginBottom="15dp"
                android:hint="@string/last_name_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lastNameMessageText"
                android:visibility="invisible"
                android:singleLine="false"
                android:text="@string/error_invalid_last_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailField"
                android:background="@android:color/white"
                android:layout_marginBottom="15dp"
                android:hint="@string/email_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailMessageText"
                android:visibility="invisible"
                android:singleLine="false" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordField"
                android:background="@android:color/white"
                android:layout_marginBottom="15dp"
                android:hint="@string/password_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_invalid_password"
                android:id="@+id/passwordMessageText"
                android:visibility="invisible" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordConfirmField"
                android:background="@android:color/white"
                android:layout_marginBottom="15dp"
                android:hint="@string/password_confirm_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_invalid_confirmaton"
                android:id="@+id/confirmMessageText"
                android:visibility="invisible" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/register"
                android:id="@+id/registerButton"
                android:layout_marginBottom="15dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/backButton"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
